--- a/tbms/src/frontend/templates/login.html
+++ b/tbms/src/frontend/templates/login.html
@@ -5,17 +5,23 @@
     <title>Login</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
 <header>
-    <nav class="navbar">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">
-            <img alt="Brand" src="{{ url_for('static', filename='images/logo.png') }}">
-          </a>
-        </div>
-      </div>
+    <nav class="navbar navbar-default" style="background-color: #ffffff; border-bottom-color: black;">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <ul class="nav navbar-nav navbar-left">
+                    <li>
+                        <a class="navbar-brand" href="#">
+                            <img style="color: orange" alt="UTEP & ARL" src="...">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div><!-- /.container-fluid -->
     </nav>
 </header>
 
