--- a/tbms/src/frontend/templates/administration.html
+++ b/tbms/src/frontend/templates/administration.html
@@ -64,17 +64,17 @@
 </header>
 
 <body style="height: calc(100% - 52px);">
-    <div class="sidebar col-sm-2">
+    <div class="sidebar col-md-2" style="background-color: black">
         <div class="nav nav-pills nav-stacked">
-            <li role="presentation"><a href="#">Servers</a></li>
-            <li role="presentation"><a href="#">Virtual Machines</a></li>
-            <li role="presentation"><a href="#">Workshop Groups</a></li>
-            <li role="presentation"><a href="#">Workshop Units</a></li>
-            <li role="presentation"><a href="#">Statistics</a></li>
-            <li role="presentation"><a href="#">User Profiles</a></li>
+            <li role="presentation"><a href="#"><img src="{{ url_for('static', filename='images/servers_icon.png')}}"></a></li>
+            <li role="presentation"><a href="#"><img src="{{ url_for('static', filename='images/virtual_machines_icon.png')}}"></a></li>
+            <li role="presentation"><a href="#"><img src="{{ url_for('static', filename='images/workshop_groups_icon.png')}}"></a></li>
+            <li role="presentation"><a href="#"><img src="{{ url_for('static', filename='images/workshop_units_icon.png')}}"></a></li>
+            <li role="presentation"><a href="#"><img src="{{ url_for('static', filename='images/statistics_icon.png')}}"></a></li>
+            <li role="presentation"><a href="#"><img src="{{ url_for('static', filename='images/user_profiles_icon.png')}}"></a></li>
         </div>
     </div>
-    <div class="panel panel-default col-sm-10" style="border-right-color: black; border-left-color: black; height: 100%; margin-bottom: 0px;">
+    <div class="panel panel-default col-md-10" style="border-right-color: black; border-left-color: black; height: 100%; margin-bottom: 0px;">
         <div class="panel-body">
             Basic panel example
         </div>
