Added tables to admin pages -Emmanuel

--- a/tbms/src/frontend/templates/administration/virtual_machines.html
+++ b/tbms/src/frontend/templates/administration/virtual_machines.html
@@ -76,7 +76,105 @@
     </div>
     <div class="panel panel-default col-md-10" style="border-right-color: black; border-left-color: black; height: 100%; margin-bottom: 0px;">
         <div class="panel-body">
-            Basic panel example
+            <nav class="navbar navbar-default" style="background-color: #ffffff; border-color: #ffffff;">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <ul class="nav navbar-nav navbar-left">
+                            <li>
+                                <button type="button" class="btn btn-default"
+                                            style="background-color: #ECECEC; margin-top: 8px; margin-right: 8px;">
+                                        +VM
+                                </button>
+                            </li>
+                            <li>
+                                <button type="button" class="btn btn-default"
+                                            style="background-color: #ECECEC; margin-top: 8px; margin-right: 8px;">
+                                        Restore
+                                </button>
+                            </li>
+                            <li>
+                                <button type="button" class="btn btn-default"
+                                            style="background-color: #ECECEC; margin-top: 8px; margin-right: 8px;">
+                                        Clone
+                                </button>
+                            </li>
+                        </ul>
+                 </div>
+                <div>
+                    <ul class="nav navbar-nav navbar-right">
+                        <div class="input-group input-group-lg">
+                            <input type="text" class="form-control" placeholder="Search" aria-describedby="sizing-addon1">
+                        </div>
+                    </ul>
+                </div>
+                </div><!-- /.container-fluid -->
+            </nav>
+            <div class="panel panel-default" style="background-color: #FCFCFC; border-color: black">
+                <div class="panel-heading" style="background-color: #BCD3E6;" align="center"><strong>Virtual Machines</strong></div>
+                    <div class="panel-body">
+                        <table class="table">
+                            <thead>
+                            <tr>
+                                <th scope="col" align="center">
+                                    <input type="checkbox">
+                                </th>
+                                <th scope="col" align="center">
+                                    <strong>Virtual Machine Name</strong>
+                                    <span class="caret" style="color: #2F80C1;"></span>
+                                </th>
+                                <th scope="col" align="center">
+                                    <strong>VRDP</strong>
+                                    <span class="caret" style="color: #2F80C1;"></span>
+                                </th>
+                                <th scope="col" align="center">
+                                    <strong>Network Adapters</strong>
+                                    <span class="caret" style="color: #2F80C1;"></span>
+                                </th>
+                                <th scope="col" align="center">
+                                    <strong>Most Recent Snapshot</strong>
+                                    <span class="caret" style="color: #2F80C1;"></span>
+                                </th>
+                                <th scope="col" align="center">
+                                    <strong>Host</strong>
+                                    <span class="caret" style="color: #2F80C1;"></span>
+                                </th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <th scope="row">
+                                    <input type="checkbox">
+                                </th>
+                                <td>Virtual Machine Name</td>
+                                <td>VRDP</td>
+                                <td>Network Adapters</td>
+                                <td>Snapshot</td>
+                                <td>Host</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">
+                                    <input type="checkbox">
+                                </th>
+                                <td>Virtual Machine Name</td>
+                                <td>VRDP</td>
+                                <td>Network Adapters</td>
+                                <td>Snapshot</td>
+                                <td>Host</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">
+                                    <input type="checkbox">
+                                </th>
+                                <td>Virtual Machine Name</td>
+                                <td>VRDP</td>
+                                <td>Network Adapters</td>
+                                <td>Snapshot</td>
+                                <td>Host</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+            </div>
         </div>
     </div>
 </body>
